--- a/src/components/Images.css
+++ b/src/components/Images.css
@@ -3,13 +3,13 @@
     width:90%;
 }
 .img-comp{
-    background-color: red;
-    width:85%;
-    padding: 40px;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    margin-left:5%;
-    margin-right:5% ;
+    background-color: rgb(87, 87, 78);
+    width:95%;
+    padding: 20px;
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+    margin-left:2.5%;
+    margin-right:2.5% ;
     
 }
 
